altered attempt to fix paragraph alignment by use of containers

--- a/alternative.css
+++ b/alternative.css
@@ -135,7 +135,7 @@ footer {
   gap: 20px;
 }
 
-.main-article p {
+.main-article .section {
   flex: 1 1 45%; 
   background: #222; 
   padding: 10px;
